--- a/public/less/ssb-site-builder/ssb-components/ssb-form-builder.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-form-builder.less
@@ -118,7 +118,7 @@
     }
     margin: 10px;
     .form-layout-1{
-         span.required{            
+         span.required{
             margin-top: 5px;
         }
         position: relative;
@@ -189,7 +189,7 @@
                 margin-left: -10px;
             }
         }
-        
+
         position: relative;
         width: 50%;
         margin: auto;
@@ -236,6 +236,13 @@
         margin-bottom: 20px;
 
     }
+}
+.req-opt-in-container {
+    margin: 0 0 0 15px;
+    display: inline-block;
+    .req-opt-in {
+       left: 0;
+   }
 }
 @media(max-width:767px) {
     .form-builder-layout{
