--- a/public/components/masthead_v1.html
+++ b/public/components/masthead_v1.html
@@ -1,4 +1,4 @@
-<div ng-class="component.type+'-v'+component.version" >
+<div ng-class="component.type+'-v'+component.version masthead_new_class" >
     <div ng-if="addUndernavClasses && allowUndernav" class="masthead_{{component._id}} mastHeadUndernav" style="height:200px" ></div>
     <div class="home-text">
         <div class="masthead-text" data-edit>
