--- a/public/less/frontend/components/masthead-v1.less
+++ b/public/less/frontend/components/masthead-v1.less
@@ -71,7 +71,7 @@
         text-align: center;
     }
 }
-
+.masthead_main{margin-top: 0px !important;}
 @media (max-width: 625px) {
     .masthead-v1 .masthead-subtitle {
         max-width: 100%;
