--- a/public/less/frontend/blog.less
+++ b/public/less/frontend/blog.less
@@ -225,5 +225,5 @@
     min-height: 580px;
 
   }
-  .masthead_main div#px-ele- {min-height: auto;}
+  .undernav200 div#px-ele- {min-height: auto;}
 }
