--- a/public/less/sections/orders.less
+++ b/public/less/sections/orders.less
@@ -118,7 +118,7 @@
         background: #fff;
     }
 }
-
+.order-quantity-span{float: left;}
 // .dropdown-menu {
 //         max-height: 200px;
 //         overflow: auto;
