Required field indicator missing from phone numbers #10606

--- a/public/less/ssb-site-builder/ssb-components/ssb-form-builder.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-form-builder.less
@@ -9,6 +9,7 @@
         position: absolute;
         color: #E6674A;
         display: inline;
+        z-index: 1;
     }
     .form-title {
         padding-left: 10px;
