Revert "Precache account object"
This reverts commit 48c2c1afb9291a99fdfdeb40adc7b8b0c984fa38.

--- a/templates/snippets/index_layout.jade
+++ b/templates/snippets/index_layout.jade
@@ -78,6 +78,8 @@ html(class="no-js", lang="en" ng-app="mainApp" ng-controller="MainCtrl as main",
 
             script.
                 console.log('orgId:', #{account.orgId});
+                window.indigenous = window.indigenous || {};
+                window.indigenous.newAnalytics = #{account.newAnalytics};
 
         //- script.
         //-     var test = !{JSON.stringify(account.website)};
