Add pagination to blog list #10598

--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-blog-post/ssb-blog-post-list/ssb-blog-post-list.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-blog-post/ssb-blog-post-list/ssb-blog-post-list.component.html
@@ -20,9 +20,12 @@
     </div>
     <section class="ssb-media-stacked ssb-blog-post-list list-unstyled">
         <article ng-attr-style="{{vm.listArticleStyle(vm.component)}}" ssb-blog-post-card-component component="vm.component" post="post"
-            filtered-post-view="vm.filteredPostView" ng-repeat="post in vm.filtered.posts = (vm.blog.posts | ssbPostFilter:vm.component) | orderBy:'-created.date' | orderBy:vm.sortBlogPosts:true track by $index">
+            filtered-post-view="vm.filteredPostView" ng-repeat="post in vm.filtered.posts = (vm.blog.posts | ssbPostFilter:vm.component:'':vm) | orderBy:'-created.date' | orderBy:vm.sortBlogPosts:true | ssbPostPageFilter:vm.paging.currentPage:vm.settings track by $index">
         </article>
     </section>
+    <div ng-if="vm.settings.enableBlogPaging && vm.totalFilteredPosts > vm.settings.blogPagePostsPerPage && vm.settings.blogPagePostsPerPage != 0">
+        <pagination total-items="vm.totalFilteredPosts" items-per-page="vm.settings.blogPagePostsPerPage" ng-model="vm.paging.currentPage"></pagination>
+    </div>
     <div ng-if="vm.blog.posts.length && !vm.filtered.posts.length" class="ssb-in-context-info margin-top-20 padding-30">
         <span class="fa fa-info-circle"> No published posts were found.</span>
     </div>
@@ -38,5 +41,3 @@
         }
     </style>
 </div>
-
-
