--- a/public/admin/assets/var/techevent/views/partials/settings.html
+++ b/public/admin/assets/var/techevent/views/partials/settings.html
@@ -290,6 +290,28 @@
                     </form>
                     <div class="clearfix"></div>
                     <form class="col-sm-6 form-horizontal">
+                        <div class="form-group">
+                            <label>Enable blog paging</label>
+                            <span tooltip-placement="bottom" tooltip="Enable blog paging"><i class="fa fa-info-circle" /></span>
+
+                            <switch ng-model="website.settings.enableBlogPaging" class="pull-right"></switch>
+
+                        </div>
+                        <div class="clearfix"></div>
+                    </form>
+                    <div class="clearfix"></div>
+                    <form class="col-sm-6 form-horizontal">
+                        <div class="form-group">
+                            <label># of Posts per Page</label>
+                            <span tooltip-placement="bottom" tooltip="Number of posts per Page"><i class="fa fa-info-circle" /></span>
+
+                            <input type='number' class='form-control' ng-model="website.settings.blogPagePostsPerPage" min='0' />
+
+                        </div>
+                        <div class="clearfix"></div>
+                    </form>
+                    <div class="clearfix"></div>
+                    <form class="col-sm-6 form-horizontal">
 
                             <div class="form-group ssb-spectrum-color-picker-small">
                                 <div class="ssb-spectrum-color-picker-background-container">
