--- a/templates/snippets/index_body_scripts.jade
+++ b/templates/snippets/index_body_scripts.jade
@@ -109,6 +109,7 @@ script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-rss-feed/ssb-
 script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-rss-feed/ssb-rss-feed.component.js")
 script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-rss-feed/ssb-rss-feed.controller.js")
 script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-filters/ssb-post-filter.js")
+script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-filters/ssb-post-page-filter.js")
 script(src="../admin/assets/js/ssb-site-builder/ssb-component-loader/ssb-navigation-css-loader.component.js")
 script(src="../admin/assets/js/ssb-site-builder/ssb-component-loader/ssb-navigation-component-loader.component.js")
 //- END AUTOINCLUDE SECTION
