--- a/public/less/ssb-site-builder/ssb-sections.less
+++ b/public/less/ssb-site-builder/ssb-sections.less
@@ -58,6 +58,9 @@
     .parallax {
         transition: opacity .5s linear;
     }
+    .parallax.blur-image{
+        background-attachment: initial!important;
+    }
 
     .ssb-component {
         z-index: 1;
