#10366 footer should not shorten on blog page

--- a/public/admin/assets/js/ssb-site-builder/ssb-site-builder.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-site-builder.component.html
@@ -145,7 +145,7 @@
         font-size: {{vm.state.website.themeOverrides.styles.paragraphSize}};
     }
 
-    .ssb-page-layout-row-2-col,.ssb-layout__header_2-col_footer .ssb-page-layout-row-footer.ssb-page-layout-row {
+    .ssb-page-layout-row-2-col, .ssb-layout__header_2-col_footer .ssb-wrap-fixed-right-nav .ssb-page-layout-row-footer.ssb-page-layout-row {
         max-width: {{vm.state.website.settings.defaultBlogTemplateWidth}}!important;
     }
 }
