--- a/templates/snippets/index_head_scripts.jade
+++ b/templates/snippets/index_head_scripts.jade
@@ -178,7 +178,7 @@ if (typeof account.website.theme !== 'undefined' && typeof account.website.theme
                 font-size: #{account.website.themeOverrides.styles.paragraphSize};
             }
 
-            .ssb-page-layout-row-2-col,.ssb-layout__header_2-col_footer .ssb-page-layout-row-footer.ssb-page-layout-row {
+            .ssb-page-layout-row-2-col,.ssb-layout__header_2-col_footer .ssb-wrap-fixed-right-nav .ssb-page-layout-row-footer.ssb-page-layout-row {
                 max-width: #{account.website.settings.defaultBlogTemplateWidth}!important;
             }
         }
