--- a/public/admin/assets/var/leadsource/views/partials/settings.html
+++ b/public/admin/assets/var/leadsource/views/partials/settings.html
@@ -241,6 +241,15 @@
                     <div class="clearfix"></div>
                     <form class="col-sm-6 form-horizontal">
                         <div class="form-group">
+                            <label>Enable Blog Post Second Column</label>
+                            <span tooltip-placement="bottom" tooltip="Enable second column on the blog post page for your website"><i class="fa fa-info-circle" /></span>
+                            <switch ng-model="account.showhide.blogPostSecondCol" class="pull-right"></switch>
+                        </div>
+                        <div class="clearfix"></div>
+                    </form>
+                    <div class="clearfix"></div>
+                    <form class="col-sm-6 form-horizontal">
+                        <div class="form-group">
                             <label>Blog template max width</label>
                             <span tooltip-placement="bottom" tooltip="Set max width of blog template"><i class="fa fa-info-circle" /></span>
 
