--- a/public/admin/assets/views/partials/settings.html
+++ b/public/admin/assets/views/partials/settings.html
@@ -272,7 +272,7 @@
                     <form class="col-sm-6 form-horizontal">
                         <div class="form-group">
                             <label>Enable Blog Post Second Column</label>
-                            <span tooltip-placement="bottom" tooltip="Enable the blog for your website"><i class="fa fa-info-circle" /></span>
+                            <span tooltip-placement="bottom" tooltip="Enable second column on the blog post page for your website"><i class="fa fa-info-circle" /></span>
                             <switch ng-model="account.showhide.blogPostSecondCol" class="pull-right"></switch>
                         </div>
                         <div class="clearfix"></div>
