--- a/public/less/sections/orders.less
+++ b/public/less/sections/orders.less
@@ -118,7 +118,10 @@
         background: #fff;
     }
 }
-.order-quantity-span{float: left;}
+.order-quantity-span{
+    float: left;
+    width: 100%;
+}
 // .dropdown-menu {
 //         max-height: 200px;
 //         overflow: auto;
