Console error on preview

--- a/templates/snippets/index_layout.jade
+++ b/templates/snippets/index_layout.jade
@@ -76,10 +76,9 @@ html(class="no-js", lang="en" ng-app="mainApp" ng-controller="MainCtrl as main",
                 script(type="text/javascript").
                     window.indigenous.blogSocialSharing = #{account.showhide.blogSocialSharing};
 
-            script.
-                console.log('orgId:', #{account.orgId});
-                window.indigenous = window.indigenous || {};
-                window.indigenous.newAnalytics = #{account.newAnalytics};
+            if account.showhide.newAnalytics
+                script(type="text/javascript").
+                    window.indigenous.newAnalytics = #{account.showhide.newAnalytics};
 
         //- script.
         //-     var test = !{JSON.stringify(account.website)};
