Fix for preview console errors

--- a/templates/snippets/index_layout.jade
+++ b/templates/snippets/index_layout.jade
@@ -78,7 +78,7 @@ html(class="no-js", lang="en" ng-app="mainApp" ng-controller="MainCtrl as main",
 
             if account.showhide.newAnalytics
                 script(type="text/javascript").
-                    window.indigenous.newAnalytics = #{account.showhide.newAnalytics};
+                    window.indigenous.newAnalytics = #{account.newAnalytics};
 
         //- script.
         //-     var test = !{JSON.stringify(account.website)};
