--- a/public/less/ssb-site-builder/ssb-sections/ssb-header.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-header.less
@@ -420,7 +420,9 @@
             display:none !important;
         }
     }
-
+    .navigation-v4 .navbar ul.navbar-nav li {
+       display: block !important;
+    }
     /*
      * layout-header-v7
     */
@@ -734,7 +736,7 @@
         .ssb-media-query-small-only({
             .ssb-component.ssb-ssb-text{
                 width: 80% !important;
-                float: left; 
+                float: left;
                 top: 0px;
             }
             .navbar-collapse{
@@ -746,7 +748,7 @@
                 min-height: 75px !important;
             }
             .o-open.ssb-component.ssb-navigation{
-                float: unset; 
+                float: unset;
             }
         });
         [social-link-component]{
