--- a/public/less/sections/orders.less
+++ b/public/less/sections/orders.less
@@ -120,7 +120,7 @@
 }
 .order-quantity-span{
     float: left;
-    width: 100%;
+    clear: both;
 }
 // .dropdown-menu {
 //         max-height: 200px;
