#10613 fix for horizontal nav

--- a/public/less/ssb-site-builder/ssb-sections/ssb-header.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-header.less
@@ -420,9 +420,11 @@
             display:none !important;
         }
     }
-    .navigation-v4 .navbar ul.navbar-nav li {
-       display: block !important;
-    }
+    .ssb-media-query-small-only({
+        .navigation-v4 .navbar ul.navbar-nav li {
+           display: block !important;
+        }
+    });
     /*
      * layout-header-v7
     */
