--- a/public/less/ssb-site-builder/ssb-sections/ssb-vertical-nav.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-vertical-nav.less
@@ -48,5 +48,9 @@
        }
     }
 
-
+   .ssb-page-section.ssb-wrap-left-fixed-left-nav {
+      .ssb-section-section{
+          overflow: auto !important;
+      }
+   }
 }
