--- a/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
@@ -137,6 +137,9 @@
             bottom: -1%;
             width: 105%;
             height: 105%;
+            max-height: 105%;
+            max-width: 105%;
+            margin: -1%;
         }
         .nav-header-div {
             -webkit-filter: blur(5px);
