#10470 for mixed content

--- a/public/less/ssb-site-builder/ssb-sections/ssb-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-hero.less
@@ -107,7 +107,9 @@
         bottom: -1%;
         width: 105%;
         height: 105%;
-        
+        max-height: 105%;
+        max-width: 105%;
+        margin: -1%;
     }
 
     .ssb-page-section-layout-hero .ssb-hero-main-header [ssb-text-component] {
