--- a/public/less/ssb-site-builder/ssb-sections/ssb-mixed-media.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-mixed-media.less
@@ -41,4 +41,8 @@
     .ssb-video,.ssb-simple-form{
         position: relative;
     }
+    .component-inner{
+        position: relative;
+        overflow: hidden;
+    }
 }
