--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -92,6 +92,12 @@ contact-details-component{
                             font-size:35px;
                             color: #666;
                         }
+                        span.gray-bg-color{
+                            color: #808080ab !important;
+                        }
+                    }
+                    .gray-bg{
+                        background: #808080ab !important;
                     }
                 }
             }
