#10620 added setting to hide copyright text

--- a/public/components/footer_v4.html
+++ b/public/components/footer_v4.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             
-            <div class="col-md-3 center inner-page">
+            <div class="col-md-3 center inner-page" ng-if="!component.hideCopyRightText">
                 
                 <span>Copyright © {{copyright.year}} {{component.footerText}}</span>
             </div>
