--- a/public/admin/assets/js/indi-email-builder/indi-email-builder.component.html
+++ b/public/admin/assets/js/indi-email-builder/indi-email-builder.component.html
@@ -52,7 +52,7 @@
         <div id="ssb-main" class="indi-email-builder-editor-container ssb-main ssb-theme- row">
             <div class="email-builder-main custom-fonts" ng-hide="!vm.uiState.dataLoaded">
                 <div class='components' ng-attr-style="background-color: {{vm.state.email.emailBg}}">
-                    <table class="device-width email-body" align="center" width="680" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
+                    <table class="device-width email-body" align="center" width="680" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;table-layout: fixed;">
                         <tr ng-if="vm.uiState.dataLoaded && !vm.state.email.components.length">
                             <td>
                                 <div class="well empty-page center">
