blur issue on open

--- a/public/less/ssb-site-builder/ssb-sections/ssb-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-hero.less
@@ -120,6 +120,7 @@
         background-image: none !important;
         .ssb-image-component-container{
             display:none;
+            overflow: hidden;
         }
     }
 
