--- a/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
@@ -22,6 +22,9 @@
         }
     }
     .ssb-page-section-layout-nav-hero {
+        .ssb-image-component-container{
+            overflow: hidden;
+        }
         .navbar-collapse{
             border-top: none !important;
             box-shadow: none !important;
